versioned_docs/version-2.1/reference/subsystems/source.mdx
---
title: source
description: |
  Configuration for roots of source trees.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration for roots of source trees.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[source]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `root_patterns`

<Option
  cli_repr={`--source-root-patterns="[["pattern1", "pattern2", ...], ["pattern1", "pattern2", ...], ...]"`}
  env_repr='PANTS_SOURCE_ROOT_PATTERNS'
  toml_repr={`[source]
root_patterns = [
    ["pattern1",
    "pattern2",
    ...],
    ["pattern1",
    "pattern2",
    ...],
    ...,
]`}
  default_repr={`[\n  "/",\n  "src",\n  "src/python",\n  "src/py"\n]`}
>

A list of source root suffixes. A directory with this suffix will be considered a potential source root. E.g., `src/python` will match `<buildroot>/src/python`, `<buildroot>/project1/src/python` etc. Prepend a `/` to anchor the match at the buildroot. E.g., `/src/python` will match `<buildroot>/src/python` but not `<buildroot>/project1/src/python`. A `*` wildcard will match a single path segment, e.g., `src/*` will match `<buildroot>/src/python` and `<buildroot>/src/rust`. Use `/` to signify that the buildroot itself is a source root. See https://www.pantsbuild.org/docs/source-roots.

</Option>

### `marker_filenames`

<Option
  cli_repr={`--source-marker-filenames="[filename, filename, ...]"`}
  env_repr='PANTS_SOURCE_MARKER_FILENAMES'
  toml_repr={`[source]
marker_filenames = [
    filename,
    filename,
    ...,
]`}
  default_repr={`[]`}
>

The presence of a file of this name in a directory indicates that the directory is a source root. The content of the file doesn&#x27;t matter, and may be empty. Useful when you can&#x27;t or don&#x27;t wish to centrally enumerate source roots via `root_patterns`.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
